2008-06-27  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_io.c: Fix loading of PFS files with one channel and unknown
	format. The bug was introduced on 2008-06-25.

2008-06-26  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_intern.h, cvl/cvl_gl.c: Replace the GLX implementation of
	cvl_gl_context_new() with code from glewinfo, in the hope that it will
	work in more situations.

2008-06-25  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_io.c: Avoid to use cvl_channel_combine() in cvl_read_pfs()
	because the source channels require too much graphics memory. Combine
	the channels in main memory instead.

2008-06-24  Martin Lambers <marlam@marlam.de>

	* cvl/Makefile.am, cvtool/Makefile.am: Fix linking with libGLEW in
	some situations.

2008-06-23  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_io.c: Fix error message when encountering an unexpected EOF
	while reading PFS data.
	* doc/cvtool.texi: Fix formatting of tonemap documentation.

2008-05-17  Martin Lambers <marlam@marlam.de>

	* NEWS: Update.
	* NEWS, doc/cvtool.1, doc/cvtool.texi, doc/cvl.texi: Update for 0.2.4.

2008-05-16  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h: Remove non-portable MH_STDIN and MH_STDOUT macros.

2008-04-28  Martin Lambers <marlam@marlam.de>

	* cvl/cvl/cvl_color.h, cvl/cvl_color.c,
	cvl/glsl/color/pseudo_color.glsl, cvtool/cmd_visualize.c: Add an
	invert option to pseudo coloring, to allow to use hue values in the
	opposite direction.

2008-04-22  Martin Lambers <marlam@marlam.de>

	* cvtool/cmd_channelextract.c: Fix number of channels in output.
	* cvtool/cmd_convert.c: Keep frame format if -f is not used.
	* cvl/cvl/cvl_visualization.h, cvl/cvl_visualization.c,
	cvtool/cmd_visualize.c, tests/cmd_visualize.sh: Remove the defunct
	needle visualization code.
	* cvl/cvl_io.c: Fix writing of PNM frames with three channels and
	format CVL_UNKNOWN.

2008-04-21  Martin Lambers <marlam@marlam.de>

	* NEWS, cvl/cvl_io.c: Fix PAM support. Add support for PAM files with
	four channels.