@@ -25,6 +25,22 @@ uniform sampler2D tex;
 
 void main()
 {
-    float g = texture2D(tex, gl_TexCoord[0].xy).r;
-    gl_FragColor = vec4(g, g, g, 1.0);
+    const float d65_x = 0.31271;
+    const float d65_y = 0.32902;
+    float y = texture2D(tex, gl_TexCoord[0].xy).r;
+    float x = y * (d65_x / d65_y);
+    float z = min(1.0, Y * (1.0 - d65_x - d65_y) / d65_y);
+    
+    // We use the D65 reference white for the RGB values.
+    // The computation is exactly the same that is used by pfstools-1.6.2.
+    mat3 M = mat3( 3.240708, -1.537259, -0.498570,
+	          -0.969257,  1.875995,  0.041555,
+		   0.055636, -0.203996,  1.057069);
+    vec3 rgb = xyz * M;
+
+    rgb.r = (rgb.r <= 0.0031308 ? (rgb.r * 12.92) : (1.055 * pow(rgb.r, 1.0 / 2.4) - 0.055));
+    rgb.g = (rgb.g <= 0.0031308 ? (rgb.g * 12.92) : (1.055 * pow(rgb.g, 1.0 / 2.4) - 0.055));
+    rgb.b = (rgb.b <= 0.0031308 ? (rgb.b * 12.92) : (1.055 * pow(rgb.b, 1.0 / 2.4) - 0.055));
+
+    gl_FragColor = vec4(rgb, 0.0);
 }
